[package]
name = "loony-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "speech_recognizer"
path = "src/bin/recognizer.rs"

[dependencies]
tonic = { version = "0.8.0", features = ["transport", "tls"] }
prost = "0.11"
prost-types = "0.11"
log = "0.4.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
gouth = "0.2.1"
serde = "1.0.214"
serde_json = "1.0.132"
serde_path_to_error = "0.1.16"
tokio-stream = { version = "0.1.6" }
async-stream = { version = "0.3.2" }
futures-core = { version = "0.3.15" }
futures-util = "0.3.15"
env_logger = "0.8.3"


[build-dependencies]
tonic-build = "0.8.0"

[features]
default = ["speech-to-text"]

google-cloud-speechtotext-v1 = []
google-cloud-speechtotext-v1p1beta1 = []

speech-to-text = [
    "google-cloud-speechtotext-v1",
    "google-cloud-speechtotext-v1p1beta1",
]
