[package]
name = "loony-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# tokio
tokio = { version = "1.40.0", features = ["rt", "net", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24.0"

# futures
futures-channel = "0.3.31"
futures-util = "0.3.31"
futures = "0.3.31"

anyhow = "1.0.89"

# web
axum = { version = "0.7.7", features = ["http1", "http2", "ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header", "typed-routing"] }
tower-http = { version = "0.6.1", features = ["full"] }

[[bin]]
name="loony-sockets"
path="./src/socket.rs"